--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background: linear-gradient(to bottom right, #EC86FF, #FFFFFF);
+    background: linear-gradient(to bottom right, #0033FF, #77FF68);
     display: flex;
     align-items: center;
     justify-content: center;
